Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.7
-
None
-
Thrift 0.7.0dev (revision 1152979)
Ruby 1.9.2
OS X 10.6, Linux x86_64
-
Patch Available
Description
There is a segfault bug in the native Ruby deserializer that was introduced with THRIFT-1189. The @index variable of MemoryBufferTransport is not always correctly updated from native code when GARBAGE_BUFFER_SIZE is exceeded.
Will attach the patch shortly.